Semantic change in XRandROutput::edid() and select the first preferred mode found for a montior.

REVIEW: 107940
BUG: 312236
BUG: 312951